# alyavseprospala_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.cursor/rules/: conventions.mdc  workflow.mdc
doc/: README.md  conventions.md  llm_doc.md  product_idea.md  tasklist.md  vision.md
doc/guides/: botfather_guide.md  cloud_deploy.md
prompts/: alyavseprospala_prompt.txt
src/: __init__.py  bot.py  config.py  data_manager.py  llm.py  logging_utils.py  metrics.py
tests/: conftest.py  test_config.py  test_data_manager.py  test_llm_client.py  test_metrics.py
