[project]
name = "alyavseprospala_bot"
version = "0.1.0"
description = "Telegram bot for dream interpretation using LLM"
authors = [
    {name = "Dreams Bot Team"}
]
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "tenacity>=8.0.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
] 